@@ -1,6 +1,5 @@
 package eca.exercises.PROD.answers;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class InvoicePrinter {
@@ -8,8 +7,8 @@ public class InvoicePrinter {
     public static void printInvoice(List<Product> products) {
 
         // Create 2 variables to accumulate the total price while looping through all the products
-        Double totalWithoutTax = 0.0; // The tax-exclusive total
-        Double totalTax = 0.0; // The total tax from all products
+        var totalWithoutTax = 0.0; // The tax-exclusive total
+        var totalTax = 0.0; // The total tax from all products
 
 
         /*
@@ -18,13 +17,13 @@ public class InvoicePrinter {
          - The quantity
          - The price, with and without tax, based on the quantity of the product
          */
-        for (Product product : products) {
+        for (var product : products) {
             // Calculate the tax amount from the price and tax percentage
-            Double taxAmount = product.getPrice() * (product.getTax() / 100);
+            var taxAmount = product.getPrice() * (product.getTax() / 100);
             // Calculate the tax-inclusive price
-            Double itemWithTax = product.getPrice() + taxAmount;
+            var itemWithTax = product.getPrice() + taxAmount;
             // Multiply the tax inclusive price by the quantity, which is the total price for this product
-            Double priceForQuantity = itemWithTax * product.getQuantity();
+            var priceForQuantity = itemWithTax * product.getQuantity();
 
             // Add to the totals
             totalWithoutTax = totalWithoutTax + (product.getPrice() * product.getQuantity());
@@ -41,7 +40,7 @@ public class InvoicePrinter {
     }
 
     public static void main(String[] args) {
-        List<Product> myBasket = Arrays.asList(
+        var myBasket = List.of(
                 new Product("Hotel Breakfast", 15.0, 1, 15.0),
                 new Product("Wine", 8.0, 2, 25.0),
                 new Product("Room Service", 10.0, 1, 10.0),
